fix body overflow on mobile, change mobile menu font size

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -117,6 +117,7 @@
       display: block;
       line-height: 55px;
       margin-left: 0;
+      font-size: 16px;
     }
     &:hover, &:active, &:focus {
       color: $color-accent;
